# igefa-scraper

./: .gitignore  README.md  main.py  pyproject.toml
igefa_scraper/: __init__.py  constants.py  logger.py  parser.py  scraper.py  utils.py
igefa_scraper/tests/: test_category_data.html  test_parser.py
